services/notification/deploy/canary/notification-service-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-canary
  labels:
    app: notification-service
    version: canary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notification-service
      version: canary
  template:
    metadata:
      labels:
        app: notification-service
        version: canary
    spec:
      containers:
        - name: notification-service
          image: notification-service:latest
          ports:
            - containerPort: 50030
            - containerPort: 8030
            - containerPort: 8031
