services/notification/deploy/canary/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
    version: canary
  ports:
    - name: grpc
      protocol: TCP
      port: 50070
      targetPort: 50070
    - name: http
      protocol: TCP
      port: 9010
      targetPort: 9010
