services/notification/deploy/canary/notification-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notification-service
spec:
  hosts:
    - "notification-service"
  http:
    - route:
        - destination:
            host: notification-service
            subset: stable
          weight: 90
        - destination:
            host: notification-service
            subset: canary
          weight: 10
      port: 50053
